Fixed the issue of the date board not showing
The html doesnt contain what is being looked for inside of the CSS script so i configured that in order to make it properly show!

--- a/style.css
+++ b/style.css
@@ -51,12 +51,13 @@ body {
     user-select: none;
     text-align: center;
     font-size: .85rem;
-}
-
-.calendar:not([hidden]) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: .5rem;
+}
+
+.calendar[hidden] {
+    display: none;
 }
 
 .controls {
